<resources>
    <string name="app_name">PDF Viewer</string>
    <string name="app_bar">PDF Viewer</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="pdf_viewer">PDF Viewer</string>
    <string name="bookLogo">TODO</string>
    <string name="all_files">All files</string>

    <string name="OpenDrawer">Open Navigation Drawer</string>
    <string name="CloseDrawer">Close Navigation Drawer</string>
    <string name="pdf_viewer2">PDF Viewer</string>
    <string name="search_icon">search icon</string>
    <string name="theme">Theme</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="pdfText">PDF</string>
    <string name="size">0MB</string>
    <string name="todo4">TODO</string>
    <string name="date">Date</string>
    <string name="folder">TODO</string>
    <string name="location">Location</string>
    <string name="pdf_image">Pdf Image</string>
    <string name="share">TODO</string>
    <string name="view_mode">TODO</string>
    <string name="pages">pages</string>
    <string name="page">Page</string>
    <string name="view_mode1">View mode</string>
    <string name="share1">Share</string>
    <string name="go_back">Go back</string>
    <string name="name_of_pdf">Name of PDF</string>
    <string name="go_to_page">Go to Page</string>
    <string name="enter_page_number">Enter page Number</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="view_mode2">View mode</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="pdf_name">pdf Name</string>
    <string name="pdf_title">Pdf Name</string>
    <string name="pdf_path">PDF Path</string>
    <string name="share2">Share</string>
    <string name="updated_text">2.10.0\nUpdated: 12:20, AM Jan 25, 2024</string>

    <string name="privacy_text">Privacy Policy

This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.

We use Your Personal data to provide and improve the Service. By using the Service, you agree to the collection and use of information in accordance with this Privacy Policy.

Interpretation and Definitions
Collecting and Using Your Personal Data
Detailed Information on the Processing of Your Personal Data
GDPR Privacy
CCPA Privacy
"Do Not Track" Policy as Required by California Online Privacy Protection Act (CalOPPA)
Children\'s Privacy
Your California Privacy Rights (California Business and Professions Code Section 22581)
Links to Other Websites
Changes to this Privacy Policy
Contact Us

Interpretation and Definitions
Interpretation
The words of which the initial letter is capitalized have meanings defined under the following conditions.

The following definitions shall have the same meaning regardless of whether they appear in singular or in plural.

Definitions
For the purposes of this Privacy Policy:

You means the individual accessing or using the Service, or the company, or other legal entity on behalf of which such individual is accessing or using the Service, as applicable.
Under GDPR (General Data Protection Regulation), You can be referred to as the Data Subject or as the User as you are the individual using the Service.

Company (referred to as either "the Company", "We", "Us" or "Our" in this Agreement) refers to Simple Design Ltd.
For the purpose of the GDPR, the Company is the Data Controller.

Application means the software program provided by the Company downloaded by You on any electronic device, named PDF Reader.
Affiliate means an entity that controls, is controlled by or is under common control with a party, where "control" means ownership of 50% or more of the shares, equity interest or other securities entitled to vote for election of directors or other managing authority.
Account means a unique account created for You to access our Service or parts of our Service.
Service refers to the Application.
Country refers to: United States
Service Provider means any natural or legal person who processes the data on behalf of the Company. It refers to third-party companies or individuals employed by the Company to facilitate the Service, to provide the Service on behalf of the Company, to perform services related to the Service or to assist the Company in analyzing how the Servic…
</string>
    <string name="delete">Delete</string>
    <string name="about_text">About PDF Viewer App: Welcome to our PDF Viewer app, a simple and efficient tool for viewing PDF documents on your device. Our app provides a user-friendly interface and essential features to help you manage and read your PDF files with ease. Key Features: - View PDF documents with smooth scrolling and zooming capabilities. - Navigate through pages using intuitive controls. - Search for specific text within PDF files. - Bookmark important pages for quick access. - Customize settings to suit your reading preferences. - Support for various file formats and sizes. We are committed to providing a seamless PDF viewing experience and continuously improving our app to meet your needs. If you have any feedback or suggestions, please feel free to reach out to us. Thank you for choosing our PDF Viewer app. Enjoy reading your PDF documents effortlessly!</string>
    <string name="notice">Notice</string>
    <string name="about">About</string>
    <string name="versionText">Version: 1.3.8L</string>
    <string name="privacy_policyText">Privacy Policy</string>
</resources>